tests/errors/test_87.x
// Enum imported into namespace already exists

using math;

enum MathErrors -> {
	FOO, BAR
}


fn main() -> void {}
